[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Klaudia Lemiec"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
pandas-profiling = "^2.10.0"
tensorflow = "^2.4.1"
streamlit = "^0.76.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
